令和4年1回目の結果を記録

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <th class="p-1">問1</th>
                         <td class="p-1"><a href="html/terms.html#h_AS">AS</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -76,7 +76,7 @@
                         <th class="p-1">問2</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_OFDM">OFDM</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -94,7 +94,7 @@
                         <th class="p-1">問3</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_OSPF">OSPF</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -112,7 +112,7 @@
                         <th class="p-1">問4</th>
                         <td class="p-1"><a href="html/terms.html#h_RIP">RIP</a> / <a href="html/terms.html#h_OSPF">OSPF</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_スパニングツリープロトコル">スパニングツリープロトコル</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -130,7 +130,7 @@
                         <th class="p-1">問5</th>
                         <td class="p-1"><a href="html/terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
                         <td class="p-1"><a href="html/terms.html#h_MTU">MTU</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -148,7 +148,7 @@
                         <th class="p-1">問6</th>
                         <td class="p-1"><a href="html/terms.html#h_ICMPv6">ICMPv6</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -166,7 +166,7 @@
                         <th class="p-1">問7</th>
                         <td class="p-1"><a href="html/terms.html#h_マルチキャストアドレス">マルチキャスト<br>アドレス</a></td>
                         <td class="p-1"><a href="html/terms.html#h_BGP">BGP</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_IGMP">IGMP</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -184,7 +184,7 @@
                         <th class="p-1">問8</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -202,7 +202,7 @@
                         <th class="p-1">問9</th>
                         <td class="p-1"><a href="html/terms.html#h_シーケンス番号">シーケンス番号</a><br>/ <a href="html/terms.html#h_確認応答番号">確認応答番号</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -220,7 +220,7 @@
                         <th class="p-1">問10</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -238,7 +238,7 @@
                         <th class="p-1">問11</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_VLANタグ">VLANタグ</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -256,7 +256,7 @@
                         <th class="p-1">問12</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -274,7 +274,7 @@
                         <th class="p-1">問13</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -292,7 +292,7 @@
                         <th class="p-1">問14</th>
                         <td class="p-1"><a href="html/terms.html#h_RIP">RIP</a> / <a href="html/terms.html#h_OSPF">OSPF</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_RMON">RMON</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -310,7 +310,7 @@
                         <th class="p-1">問15</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -328,7 +328,7 @@
                         <th class="p-1">問16</th>
                         <td class="p-1"><a href="html/terms.html#h_CDN">CDN</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -346,7 +346,7 @@
                         <th class="p-1">問17</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -364,7 +364,7 @@
                         <th class="p-1">問18</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -382,7 +382,7 @@
                         <th class="p-1">問19</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -400,7 +400,7 @@
                         <th class="p-1">問20</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -418,7 +418,7 @@
                         <th class="p-1">問21</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_IEEE802.1X">IEEE802.1X</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_DNSリフレクタ攻撃">DNSリフレクタ攻撃</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -436,7 +436,7 @@
                         <th class="p-1">問22</th>
                         <td class="p-1"><a href="html/terms.html#h_PCIExpress">PCI Express</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_量子アニーリング方式">量子アニーリング方式</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -454,7 +454,7 @@
                         <th class="p-1">問23</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_FaaS">FaaS</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -472,7 +472,7 @@
                         <th class="p-1">問24</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_SysML">SysML</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -490,7 +490,7 @@
                         <th class="p-1">問25</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -508,7 +508,7 @@
                         <th class="p-1">正解率</th>
                         <td class="p-1">64%</td>
                         <td class="p-1">64%</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">80%</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
