--- a/html/r4_result.html
+++ b/html/r4_result.html
@@ -110,7 +110,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問4</th>
-                        <td class="p-1"><a href="terms.html#h_スパニングツリープロトコル">スパニングツリープロトコル</a></td>
+                        <td class="p-1"><a href="terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -416,7 +416,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問21</th>
-                        <td class="p-1"><a href="terms.html#h_DNSリフレクタ攻撃">DNSリフレクタ攻撃</a></td>
+                        <td class="p-1"><a href="terms.html#h_DNSリフレクタ攻撃">DNSリフレクタ<br>攻撃</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -434,7 +434,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問22</th>
-                        <td class="p-1"><a href="terms.html#h_量子アニーリング方式">量子アニーリング方式</a></td>
+                        <td class="p-1"><a href="terms.html#h_量子アニーリング方式">量子アニーリング<br>方式</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
