--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <th class="p-1">問4</th>
                         <td class="p-1"><a href="html/terms.html#h_RIP">RIP</a> / <a href="html/terms.html#h_OSPF">OSPF</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1"><a href="html/terms.html#h_スパニングツリープロトコル">スパニングツリープロトコル</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -418,7 +418,7 @@
                         <th class="p-1">問21</th>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_IEEE802.1X">IEEE802.1X</a></td>
-                        <td class="p-1"><a href="html/terms.html#h_DNSリフレクタ攻撃">DNSリフレクタ攻撃</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_DNSリフレクタ攻撃">DNSリフレクタ<br>攻撃</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -436,7 +436,7 @@
                         <th class="p-1">問22</th>
                         <td class="p-1"><a href="html/terms.html#h_PCIExpress">PCI Express</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1"><a href="html/terms.html#h_量子アニーリング方式">量子アニーリング方式</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_量子アニーリング方式">量子アニーリング<br>方式</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
